app/manifest/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: hello-alb-gateway
namespace: default
spec:
  gatewayClassName: aws-alb-gateway-class
  infrastructure:
    parametersRef:
      kind: LoadBalancerConfiguration
      name: lbconfig-gateway
      group: gateway.k8s.aws
  listeners:
    - name: https
      hostname: "hello.api.com"
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: Same
